--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <meta name="title" content="Free Background Eraser.com">
+    <meta name="description" content="Free background remover for images and video. Download transparent pngs or green screen videos">
+    <meta name="keywords" content="background removal, free background eraser, remove bg, transparent bg, bg eraser, magic eraser, alpha matte, Remove Image Background, AI background remover">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Free Video Eraser</title>
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
@@ -14,8 +26,9 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Free Background Eraser.com doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
