--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,14 @@
 
     <!-- Primary Meta Tags -->
     <title>Free Background Eraser - Remove the background from videos & photos</title>
-    <meta name="title" content="Free Background Eraser - Remove the background from videos & photos">
-    <meta name="description" content="Free background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
+    <meta name="title" content="Free Online Background Eraser - Remove the Background from Videos + Photos">
+    <meta name="description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Free Background Eraser - Remove the background from videos & photos">
-    <meta property="og:description" content="Free background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
+    <meta property="og:description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
     <meta property="og:image" content="https://freebackgrounderaser.com/demo.jpg">
 
     <!-- Twitter -->
