--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
-    <title>Free Background Eraser - Remove the background from videos & photos</title>
+    <title>Free Online Background Eraser - Remove the Background from Videos + Photos</title>
     <meta name="title" content="Free Online Background Eraser - Remove the Background from Videos + Photos">
     <meta name="description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
 
