switch to vuetag plugin, add GA events for processing , fix typo

--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,20 @@
     <!-- Primary Meta Tags -->
     <title>Free Online Background Eraser - Remove the Background from Videos + Photos</title>
     <meta name="title" content="Free Online Background Eraser - Remove the Background from Videos + Photos">
-    <meta name="description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
+    <meta name="description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your computer">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Free Background Eraser - Remove the background from videos & photos">
-    <meta property="og:description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
+    <meta property="og:description" content="Free online background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your computer">
     <meta property="og:image" content="https://freebackgrounderaser.com/demo.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Free Background Eraser - Remove the background from videos & photos">
-    <meta property="twitter:description" content="Free background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your copmuter">
+    <meta property="twitter:description" content="Free background remover for images and video. Download transparent pngs or green screen videos. Privacy friendly: No data leaves your computer">
     <meta property="twitter:image" content="https://freebackgrounderaser.com/demo.jpg">
 
     
@@ -40,14 +40,14 @@
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBR7FPKBC7"></script>
+<!--     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HBR7FPKBC7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
       gtag('config', 'G-HBR7FPKBC7');
-    </script>
+    </script> -->
     
   </head>
   <body>
